bugfix: hide by moving 9999px offscreen

--- a/src/aside/aside.css
+++ b/src/aside/aside.css
@@ -72,6 +72,6 @@ footer#watermark {
 @media screen and (max-width: 750px) {
   aside {
 		position: absolute;
-		left: -999px;
+		left: -9999px;
   }
 }
